Tab page cadastro cliente

--- a/SucosVendas/Sucos Vendas/View/Frm_Principal.resx
+++ b/SucosVendas/Sucos Vendas/View/Frm_Principal.resx
@@ -120,6 +120,69 @@
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>153, 17</value>
+  </metadata>
+  <data name="imageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABe
+        DAAAAk1TRnQBSQFMAgEBBgEAAQgBAAEIAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/xEAARQCawEQDGswAAEH
+        AosBEQaLAUMCawKLARUwAAH/AWsFiwFDAfgGiwERMQABEwFrA4sBQwL1AfgEiwFDAf8iAAHyAQcBvAH/
+        BQACBwHxBAAB9AK8Ae8E9QEQArwB8SIAAf8BkgEqATEBNwFKAfMEAAPrAfgFAAH/AfgE8AG8ARUkAAG8
+        ATAEMQHrA/IC8wHwAfIB8AUAAbwG9QFtJAAB7QE3ARIBKQMxAyoBAwH4ASkB+AEjAfAEAAFtBvUBbQH0
+        IwAB7QE3ARIBUQIxATADIgEjBCoB+AMAAQcBkgb1AW0B+CMAAbwBMAQxAesI8gH0AwAB9AESAfUBEAL1
+        AfgBkgFtAREjAAH/AZIBKgExATcBSgHzDAAB/wEUBvUBbQEVJQAB8gEHAbwB/w0AAfQB6wYHARIBbjYA
+        AUMBeQZ6AeoB6zYAAXMHegHqAf82AAEcB3oBFDcAB/gBBzIAAeINAAGWApUBcAH/IgABCQcIAwAB4gUA
+        AtoC2QHaAtkClgKVAnAEAAH/EAAE9ANTAXUFAAGZB3UBbwIAAeIFAAPaAtkB2gHZApYClQJwAwACWQFY
+        AwAH/wUAAfQDlARTBQABmQd1AZkBmgEAAeIGAAPaAbkBWQHaApYClQJwAwABWQFTAfQDAAGSAfEC8gLx
+        AZIFAAH0B1MB8wQAApkBeQGZBnUBAAHiBwAC2gNZApYClQJwAwABOAFZAXoDAAGSBfMBkgUAAfQBUwF6
+        BVMFAAGZA3UBvQGgARoDdQEAAeIJAAFYAlkBAAGWApUBcAQAATgBWQH/AwAB9wXxAZIFAAH0AVMB8wRT
+        AQgFAAGZA5oBmQGgARoBnwJ1AQAB4ggABVkGAAL/AlkBdQL/AQAB8gHwBLwB8AUAAfQCUwHyARoBTQH0
+        AbwFAAGZBXUBGgGgAZ8BGgEAAeIHAAGfAXoDWQF6BQAB/wFZBTgBWQ0AAfQEUwFNBwABmQWaAXoBmQGg
+        ARoBnwHiBwAHWQUAAlkFOAEAAfcB7wIHAu8B9wUAAfQBUwHxAfMB8AFNBwABmQh1ARoBoAGfAfMGAAF5
+        AlkBegJZAXQFAAF6AlkEOAEAAfcB8wL0AvMB9wUAAfQEUwFNBwACmQGaAZkDmgGZAZoBdQEAAaABGgGZ
+        BQABKwVZASoEAAH/AnoBWQH0AVkCOAEAAe8F8wH3BAAB/wH0A/MB8gHzBwABmQl1AQAB4gEbAfYFAAEr
+        BVkBKgUAAnoBvQEAAfYCOAH/Ae4G7wMAAfYBUwH0A/MB8gHzBwABmQF1BsMBGgF1AQAB4ggAAVECKwFR
+        ASsGAAH/AnoBmgJZAfQLAAF6AVMBwwEbAvMB8gHzCQAGoAEbAgAB4gkAAisBUQErBwAB/wGgAnoB/w0A
+        AlMBWQIAAf8BlwFyAfUJAAKgAcEEAAEZOAAB9AHDOAABQgFNAT4HAAE+AwABKAMAAUADAAEgAwABAQEA
+        AQEGAAEBFgAD/wEAAv8GAAL/BgAC/wYAAv8BgAUAAcMB4wHAAQMEAAEBAeEB8AEPBQABAQHwAQ8GAAHw
+        AQcGAAHgAQcGAAHgAQcEAAEBAf8B4AEHBAABwwH/AeABBwQAAv8B4AEHBAAC/wHgAQcEAAL/AeABDwQA
+        Av8B4AEfBAABgAEDAf8B4AT/AYABAwHgAQAB9wH/AfgBBwGAAQMB4AEAAeMBgAH4AQcBgAEDAfABAAHj
+        AYAB+AEDAYABAwH4AQAB4wGAAfgBBwGAAQMB/gEhAeMBgAH4AQcBgAEDAfwBHwKAAfgBBwGAAQMB+AEf
+        AQAB/wH4AR8BgAEDAfgBDwKAAfgBHwGAAQEB+AEPAoAB+AEfAYABAAH4AQ8BAAGAAfABHwGAAQAB+AEP
+        AYgBAAHgAR8BgAEDAfwBHwGAAf8B4AEfAYABAwH+AR8BwQH/AfEBhwGAAQMG/wH8B/8L
+</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
