Finalização de tela de cadastro e tela login com sql

--- a/SucosVendas/Sucos Vendas/View/Frm_CadastroLogin.resx
+++ b/SucosVendas/Sucos Vendas/View/Frm_CadastroLogin.resx
@@ -121,7 +121,7 @@
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EQAACxEBf2RfkQAAERtJREFUeF7tXAl4VOW5Tl2qoC0lmZmsZBmiIRAgCWqrbbVsIYSE1RiIgAQEn+d6
+        DgAACw4BQL7hQQAAERtJREFUeF7tXAl4VOW5Tl2qoC0lmZmsZBmiIRAgCWqrbbVsIYSE1RiIgAQEn+d6
         67313l6X6pO2KDtVJJElgCQhKwpmD0xCEqoEkGK1ilW5hUKULckkQZCl+vX7/vP9M+fMTDQkAYaZeZ/n
         fUxm5vzny/t+y3/OGfTywAMPPPDAAw888MADDzzwwAMPnBGmBf371c0zzKybq8uon6fbizxSP09vRkLd
         XBXT9LCLOAf5mMLa2cxZeqghPqq7wMt68H2ome0diGLn1M3TXax/XA92RAM0JqD4wgQygE2olSZIA2bq
@@ -195,6 +195,144 @@
         cPrOZfHuPXC7ioDsWT7+OamZ/tmpF3pswMrEC/1WJKz+8co4b17eg64iaPPsQL/N0xf7bZxx7EoN6Lcq
         8Rhm/yLvlRN65wrXrZGefpNv1oz7fLNSnjVkPbJVvz75QxS/Rb9m6kUU/6Iuc0qLT8bkD/qvnry1/+pJ
         z/i8mnhv926seXn9G3o0/PkfVuUaAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="imageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADK
+        HQAAAk1TRnQBSQFMAgEBCQEAARgBAAEIAQABHgEAAR4BAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABeAMAAVoDAAEBAQABCAUAATABKhgAAYACAAGAAwACgAEAAYADAAGAAQABgAEAAoACAAPAAQABwAHc
+        AcABAAHwAcoBpgEAATMFAAEzAQABMwEAATMBAAIzAgADFgEAAxwBAAMiAQADKQEAA1UBAANNAQADQgEA
+        AzkBAAGAAXwB/wEAAlAB/wEAAZMBAAHWAQAB/wHsAcwBAAHGAdYB7wEAAdYC5wEAAZABqQGtAgAB/wEz
+        AwABZgMAAZkDAAHMAgABMwMAAjMCAAEzAWYCAAEzAZkCAAEzAcwCAAEzAf8CAAFmAwABZgEzAgACZgIA
+        AWYBmQIAAWYBzAIAAWYB/wIAAZkDAAGZATMCAAGZAWYCAAKZAgABmQHMAgABmQH/AgABzAMAAcwBMwIA
+        AcwBZgIAAcwBmQIAAswCAAHMAf8CAAH/AWYCAAH/AZkCAAH/AcwBAAEzAf8CAAH/AQABMwEAATMBAAFm
+        AQABMwEAAZkBAAEzAQABzAEAATMBAAH/AQAB/wEzAgADMwEAAjMBZgEAAjMBmQEAAjMBzAEAAjMB/wEA
+        ATMBZgIAATMBZgEzAQABMwJmAQABMwFmAZkBAAEzAWYBzAEAATMBZgH/AQABMwGZAgABMwGZATMBAAEz
+        AZkBZgEAATMCmQEAATMBmQHMAQABMwGZAf8BAAEzAcwCAAEzAcwBMwEAATMBzAFmAQABMwHMAZkBAAEz
+        AswBAAEzAcwB/wEAATMB/wEzAQABMwH/AWYBAAEzAf8BmQEAATMB/wHMAQABMwL/AQABZgMAAWYBAAEz
+        AQABZgEAAWYBAAFmAQABmQEAAWYBAAHMAQABZgEAAf8BAAFmATMCAAFmAjMBAAFmATMBZgEAAWYBMwGZ
+        AQABZgEzAcwBAAFmATMB/wEAAmYCAAJmATMBAANmAQACZgGZAQACZgHMAQABZgGZAgABZgGZATMBAAFm
+        AZkBZgEAAWYCmQEAAWYBmQHMAQABZgGZAf8BAAFmAcwCAAFmAcwBMwEAAWYBzAGZAQABZgLMAQABZgHM
+        Af8BAAFmAf8CAAFmAf8BMwEAAWYB/wGZAQABZgH/AcwBAAHMAQAB/wEAAf8BAAHMAQACmQIAAZkBMwGZ
+        AQABmQEAAZkBAAGZAQABzAEAAZkDAAGZAjMBAAGZAQABZgEAAZkBMwHMAQABmQEAAf8BAAGZAWYCAAGZ
+        AWYBMwEAAZkBMwFmAQABmQFmAZkBAAGZAWYBzAEAAZkBMwH/AQACmQEzAQACmQFmAQADmQEAApkBzAEA
+        ApkB/wEAAZkBzAIAAZkBzAEzAQABZgHMAWYBAAGZAcwBmQEAAZkCzAEAAZkBzAH/AQABmQH/AgABmQH/
+        ATMBAAGZAcwBZgEAAZkB/wGZAQABmQH/AcwBAAGZAv8BAAHMAwABmQEAATMBAAHMAQABZgEAAcwBAAGZ
+        AQABzAEAAcwBAAGZATMCAAHMAjMBAAHMATMBZgEAAcwBMwGZAQABzAEzAcwBAAHMATMB/wEAAcwBZgIA
+        AcwBZgEzAQABmQJmAQABzAFmAZkBAAHMAWYBzAEAAZkBZgH/AQABzAGZAgABzAGZATMBAAHMAZkBZgEA
+        AcwCmQEAAcwBmQHMAQABzAGZAf8BAALMAgACzAEzAQACzAFmAQACzAGZAQADzAEAAswB/wEAAcwB/wIA
+        AcwB/wEzAQABmQH/AWYBAAHMAf8BmQEAAcwB/wHMAQABzAL/AQABzAEAATMBAAH/AQABZgEAAf8BAAGZ
+        AQABzAEzAgAB/wIzAQAB/wEzAWYBAAH/ATMBmQEAAf8BMwHMAQAB/wEzAf8BAAH/AWYCAAH/AWYBMwEA
+        AcwCZgEAAf8BZgGZAQAB/wFmAcwBAAHMAWYB/wEAAf8BmQIAAf8BmQEzAQAB/wGZAWYBAAH/ApkBAAH/
+        AZkBzAEAAf8BmQH/AQAB/wHMAgAB/wHMATMBAAH/AcwBZgEAAf8BzAGZAQAB/wLMAQAB/wHMAf8BAAL/
+        ATMBAAHMAf8BZgEAAv8BmQEAAv8BzAEAAmYB/wEAAWYB/wFmAQABZgL/AQAB/wJmAQAB/wFmAf8BAAL/
+        AWYBAAEhAQABpQEAA18BAAN3AQADhgEAA5YBAAPLAQADsgEAA9cBAAPdAQAD4wEAA+oBAAPxAQAD+AEA
+        AfAB+wH/AQABpAKgAQADgAMAAf8CAAH/AwAC/wEAAf8DAAH/AQAB/wEAAv8CAAP//wD7AAHxARIB9HQA
+        AfEBDgEAAfNnAAH0AbwB9wLtAfcB8AH0BAAB8QEOAQAB8GUAAf8B8AESCAABEgG8Af8B8QEOAQAB8GUA
+        AfEBFAIAARQB7wHxAvMB8QHvARMCAAEVAQ4BAAHwZAAB/wHtAgAB6wHzCAAB8wETAgAB8GQAAfQBFAEA
+        AREB8QQAAf8C9AH/AgAB8QEOAQAB8AHyAewB9GEAAfMBEAEAAesB/wQAAfABEQIAARUC8QEOAQAB8AEA
+        AQcBAAEQAfNfAAHzAQ8BAAH3Af8EAAHwAgACEgIAAQ4BAAHwAgAB/wH3AQABDwHzXQAB9AEQAQAB7wUA
+        Af8BEQEAAfACAAH3AgAB8AUAAe8BAAEQAfRbAAH/ARQBAAHvBgAB9AEAARICAAHxAQ4BAAHwBwAB7wEA
+        ARQB/1oAAf8BFAEAAe8GAAH0AQABEgEAAfEBDgEAAfAIAAHvAQABFAH/WwAB9AEQAQAB7wUAAf8BFQEA
+        AfcBDgEAAfAIAAHvAQABEAH0XQAB8wEPAQAB9wH/BAAB8QMAAfAHAAH/AfcBAAEPAfNfAAHzARABAAHr
+        Af8DAAHxAQ4BAAHwBwAB/wHrAQABEAHzYQAB9AETAQABEQHxAQAB8QEOAQAB8AcAAfEBEQEAARQB9GMA
+        Af8BkgIAAW0BDgEAAfAGAAHzAesCAAHtAf9mAAHyARECAAHwAfMB8QLzAfEB7wEUAgABFQHxaAAB8QEO
+        AQAB8AEAAUMGAAESAfAB/2gAAfEBDgEAAfACAAHyAfcC7QH3AbwB9GoAAfEBDgEAAfBzAAHxAQ4BAAHw
+        dAABEgEAAfB1AAH0AfP/AJ8AAfcc6wGSWgABEwVrAREQawFDAWwEawETMAAEUwH/JQAB7QFrA4sCawuL
+        B2sDiwFrAe0nAAfzARsGUwGaJAAB8AEVA4sCaweLAmsCiwdrA4sBZgG8JwAH9AhTJAAB9AFDC4sBawIU
+        AYYLiwFDAfMnAAH0BVMBTQlTIwAB/wHqAWsJiwGGARMB9wHvARMBhgmLAWsB6gH/DQAB/wG8Ae8B8wH/
+        FQAB9A1TAU0BUyQAAfABFQFrB4sBhgETAfcB9AH1Ae8BEwGGB4sBawEVAbwB/xQAAewSAAH0AVkOUxkA
+        Bv8FAAH/Ae8BEgFrBYYBZgETARwB9AL1AfQB7wETAWYFhgFrARIB7wL/DgABEQFDAQ4FAAEOEAAB9AFZ
+        DVMB8wkAAf8B8ALvAbwB/woAAfIDEQHxAUMB9AQAAv8B8QEHAfcDkgHtARMBkgHzBPUB9AH3ARQB7QOS
+        AfcB7wHxAv8HAAEQAwABEggAAf8EAAHzDgAB9AFZAlMB8QHwCVMIAAH/Ae8BDwEpAgMBKQEPAfcB/wgA
+        AfQG7QGSAf8EAAL/BPQBBwETARIG6wHqARQBBwHzA/QC/wsAARQEAAH0AwAB/xUAAfQBWQJTAfMB8gdT
+        AXkB/wcAAf8B6wEoBjEBKQFtAf8HAAH0Bu8BBwH/CAAB/wHwAfgB7Qj3Ae0B+AG8Af8eAAHzDwAB9AFZ
+        AlMBdQEbBFMBdQHzAZgB7QGYBwAB7wEoCDEBKQH3BwAB8wbrAfgB/wgAAfQC9wHzCPQB8wEcAZIB9BUA
+        AfABAAH3FgAB9AFZBFMBGgHxAZoBUwF1AXQB/wHvAZgGAAH/AQ8BNwkxAQ8G8AHxAf8BAAH/AfICAAH/
+        AfQJAAH0AZIBBwr1AQcB7QHzEQAB8AkAAf8SAAH0AVkEUwHyAfMBGgFTAXUB8gkAAfABKAExATcCIgEq
+        BTEBAwYpASgBEwHyAesBDgHsAfIBFQEPAfIIAAHzAZIBBwr1AQcB7QHzEwAB/wUAAfcUAAH0AVkIUwF1
+        AfMJAAHvAQMBMQEoAfgB7wEODTEBAwEOAQMBMQEpAQ8BKgEwARAB8wYAAf8B7wFtAQcK9QEHAW0BBwH/
+        BgABDyYAAfQBWQFTAfABegF1ARoB8AEaAVMBdQHzCQAB7wEDATEBKAH4Ae8BDgUxASoFDgEpASgBKQcx
+        AQMB7wUAAf8B7wEUAeoBBwr1AQcB6gETAe8B/wgAAQ4IAAH/BQABvBQAAfQBWQFTAfMB8gF6AvMB8AFT
+        AXUB8wkAAfABKAExATcCIgEqBTEBAw8pASIB7wUAAfQB9wHtAfgBBwH1AvQE9QL0AfUBBwH4Ae0B9wH0
+        CQABDgUAAZIJAAH0EgAB9AJTAXoB8gF1AnoCUwF1AfMJAAH/AQ8BNwkxAQ8Q8AH0BQAB9AH3AfgB6wEH
+        AfMBHAHuAfQC9QH0Ae4B9wHyAQcB6wH4Ae0B8wcAAf8LAAH/AQAB/xYAAfQJUwF1AfMKAAHvASgIMQEp
+        AfcWAAH/AfEB6gESAgcBEgH4AfMC9QH0AfgBEwIHAhIBBwH/LAAB9AfzAfABlwLzCgAB/wHrASgGMQEp
+        AW0B/xYAAf8B8wH4ARMBBwHyAfcBBwH0AvUB9AHuAZIB8gEHARMB6wHyAf8NAAEVBAABkgMAAfAEAAHr
+        DgAB9QFZAfQH8wHwAZcC8wsAAf8B7wEPASkCAwEpAQ8B9wH/FwAB/wHwARIBSgEHCvUBBwFtAeoB7wH0
+        CwABDwMAARUJAAHvAwABDgsAAfQBWQFTAfQH8wHwAZcC8w0AAf8B8ALvAbwB/xkAAf8BBwETAesB9wrx
+        Ae8B6wFuAe0B8xMAAewB8AHvARAFAAH/DAACWQFTAfQH8wHwAZcC8ywAAf8B7wFDARMB6wr4AW0B6gFu
+        AfgB8hoAAf8OAAFZAVMBWQH0B/MB8AGXAvMrAAH/AfIB+AHrAXMLHAFuAUoBbgH4AfISAAHyAREBAAEO
+        Ae8B/xEAB1kEAAH/AXItAAH0AfcBcwF5DHoBdAESARMB9wH0KQABwwFZAVMBWQFTAVkB9AQAAf8BVwFQ
+        AfgB8CoAAfMB+AF0DXoBdAH4AQcB9AH/KgABwwNZAfQIAAHwAZcBVwFyKAAB8wHrDnoBcwHtAfQB/2QA
+        AfMB6wGZDHoBeQHrAe8B/2UAAfMB6g1zARQB7AH0ZgAB9AHvDPgB7QHwAf8oAAEZFgABGQH/NgAB/wF2
+        AZYDlQFOAfQhAAHoFwAB9DUAAfQDlgOVAU4BcAEIIAAB6AIAD+gGAAH1JwAB/wLaAtkB2gLZAdoD2QEA
+        AdoElgOVAU4CcAH0HwAB6AEAAegBwQ0HARkB6AUAAfUnAATaAtkB2gLZAdoD2QWWAQkB/wGVAU4DcAYA
+        Af8B9gH/FgAB6AEAAeEBmQx1AZkBmgHvAeAEAAH1JwAB2wTaAtkB2gLZAdoC2QWWAQkB/wGVAU4DcAUA
+        Af8BWAFZAVgBeQgAC/8CAAHoAQAB4AGZDHUBmQGaAY4B7wHgAwAB9REAAf8BvAHvAfMB/xEAAfQF2gLZ
+        AdoC2QHaAdkDlgb/A3AFAAH0AVkBUwJZAf8FAAH/AbwLBwH/AQAB6AEAAeABmQ11AZkBkwIHAwAB9RgA
+        AewPAAbaAtkB2gG0AdQB2gOWAgkBwgH/AQkBuwNwBQAB9AFZAlMBegH/BQAB/wH3Ae8BBwbvAQcB7wH3
+        Ae4BAAHoAQAB4AGZDnUCmQEHAQkCAAH1EgABEQFDAQ4FAAEODQAB/wbaAXQDWQHtBZYBCQH/AZUBTgNw
+        BQAB9AJZAVMBWAYAAf8BkgHxCPMB8QH3Ae4BAAHoAQAB4AOZAZoEmQl1AZoBCAIAAfUKAAEQAwABEggA
+        Af8EAAHzDAAB/wHbA9oBeQVZBZYBCQH/AZUBTgJwAU4FAAH0BFkB/wUAAf8B9wHxCPMB8QH3Ae4BAAHo
+        AQAB4AKZA5oCmQOaAZkGdQGaAQgCAAH1DAABFAQAAfQDAAH/FQAB/wLaBlkBmASWA5UBTgJwAf8FAAH0
+        A1kBegH/BQAB/wH3AfEI8wHxAfcB7gEAAegBAAHgAZkBdQWZARoBoAGaARoBmQV1AZoBCAIAAfUbAAHz
+        EgACWQFYAVkBWAFZAfMB/wOWA5UBTgFwAfQGAAH0A1kBGgH/BQAB/wH3AfEG8gPxAfcB7gEAAegBAAHg
+        AZkGdQKaAcMCnwEaAZkDdQGaAQgCAAH1EgAB8AEAAfcYAAH/BlkBGgIAAeABlgOVAZ0B/wcAAfQEWQH/
+        BQAB/wHvAfcD7wEcA+8BHAH3Ae0BvAEAAegBAAHgApkBmgR6AXkBGgKgARoCnwKZAXUBmgEIAgAB9Q4A
+        AfAJAAH/FAAIWQGgDAAD/wH0BFkF/wEAAf8B8APuCAcB/wEAAegBAAHgAZkBdQiZAZoBoAHDAp8BGgGZ
+        AZoBCAIAAfUQAAH/BQAB9xUAAXoBWQJ6AlkCegFZAXoB9AoAAfQBWQM4CFkBegH/AgAK/wMAAegBAAHg
+        AZkJdQGZARoCoAEaAp8BGgEIAgAB9QQAAQ8nAAFZAXoGWQF6AlkJAAH/AlkJOANZEAAB6AEAAeABmQF1
+        CpkCmgGgAb0CnwEIAeEBAAH1BwABDggAAf8FAAG8FQAJWQF6AVkKAANZCTgCWQEAAf8B7gvvAf8BAAHo
+        AQAB4AKZA5oGegGaAXUBmQEaAZoBoAEaAZ8BvAEZAfQB/wcAAQ4FAAGSCQAB9BIAAVkBegpZAXkJAARZ
+        CTgBWQEAAf8B9wEHB+4CBwG1Ae4BAAHoAQAB4AGZDXUCmQGaAaABvQKfAfMB9AH/BAAB/wsAAf8BAAH/
+        FgABUgF6A1kCegRZAXoBWQkAAnoDWQg4AVkBAAH/AfcB8gjzAfIB7wHuAQAB6AEAAeABmQF1D5kBGgKg
+        ARoBnwEaAfQC/ycAAQcBegNZAnoEWQF6Af8JAAN6A1kHOAFZAQAB/wH3AfMG9APzAe8B7gEAAegBAAHg
+        ApkDmgGZAXkImgF5AXUBmQHwAcICGgGfARoBGwH/CAABFQQAAZIDAAHwBAAB6xAAAW8BeglZAVgB9AkA
+        BHoFWQQ4AVkBAAH/Ae8K8wHvAe4BAAHoAQAB4AOZApoCmQWaApkBmgGZAXUBmgEIAeEBGQEaAb0CmQH/
+        BgABDwMAARUJAAHvAwABDg4AAUwBWQF6B1kBegEqAZoIAAH/AeUEegGaAv8BwwFZBDgBAAH/Ae8B8Qfz
+        AfIB8QHvAe4BAAHoAQAB4AGZEHUBmgEIAgAB8gHzAhoB/w4AAewB8AHvARAFAAH/DwABTAErAXoGWQF6
+        AVkBKgGTCQABwwR6Af8CAAH/BDgBWQL/AQcBkgMcBfcCkgG8AQAB6AEAAeABmRB1AZoBCAIAAfQB9QH0
+        Av8VAAH/EQABdAFRAVIBegFSAUwBKwFMAXkBegErASoBGwkAAf8B5QN6AfYCAAH/BDgB9AEAAf8B8QPw
+        CLwB/wEAAegBAAHgAZkBdQGZCxoCmgF1AZoBCAIAAfURAAHyAREBAAEOAe8B/xQAAf8BKwJRBCsBUQFM
+        ASsBKgsAAcMB5QJ6AVkB9QH/AlkBOAFZAXoB/wMAC/8CAAHoAQAB4QKZAZoMoAEaAZkBBwEJAgAB9S0A
+        BisBUQIrDAAB/wHDAeUEegNZAXoB/xEAAegBAALhAdwBCAygAfAB3AHhAegCAAH1LgABmQQrAVEBKwGZ
+        DQAB/wH0AaAFegHDAf8SAAHoBAAB3APCARoEoAEbBMIFAAH1LwAB/wEaBZkPAAL/AvQD/xkAA+gBGQSg
+        AeID6AUAAeEB9V8AAfUI4gHzARoDoAEACOIB9QH/aAAB/wH0AcMBoAH0aQABQgFNAT4HAAE+AwABKAMA
+        AXgDAAFaAwABAQEAAQEFAAGgAQUWAAP/AQAD/wH8DAAD/wH8DAAD/wH8DAAD/wH8DAAD/wGMDAAD/wEM
+        DAAB/wHgAR4BHAwAAf8CAAE8DAAB/gIAAXwMAAH4AR8B4AH8DAAB8AF4AWABPAwAAeAB8AECARwMAAHB
+        AeABBgEMDAABhwHDAQ8BhAwAAQ8BxgEfAcAMAAEPAcQBPwHADAABhwHAAX8BhAwAAcEB4AH+AQwMAAHg
+        AeEB/AEcDAAB8AFDAfgBPAwAAfgBBwHgAXwMAAH+AQABAQH8DAAB/gEQAQMB/AwAAfwBMAEfAfwMAAH4
+        AX8B/wH8DAAB8AL/AfwMAAHxAv8B/AwAAfMC/wH8DAAD/wH8DAAD/wH8DAAH/wHwAwABPwP/AQAH/wHw
+        AwABPwP/AQAC/wHBBP8B8AMAAT8D/wEAAf8BgAEABP8B8AMAAT8D/wEAAf8BgAEABP8B8AMAAT8D/wEA
+        Af8BgAEAAX8D/wHwAwABPwH+AQ8B/wEAAf8BgAEAAX8D/wH4AwABPwHwAQEB/wEAAf8BgAEAAX8C/wHA
+        AfgDAAE/AcABAAF/AQAB/wGAAQABfwHAAf8BwAF4AwABfwEHAfgBHwEAAf8BgAEAAf8BAAE/AcABHgIA
+        AQEB/gEeAg8BAAH/AYABAAH+AQABHwHAAR8B4AEAAR8B/AF8AQcBhwEAAf8BgAEAAf4BAAEfAcABHwHg
+        AQABHwL4AUMB4wEAAf8BgAEAAfwCAAETAT8B4AEAAR8E8QEAAf8BgAEHAfwDAAEfAeABAAEfAeMC8QH4
+        AQAB/wGAAQcB/AMAAQ8BwAEAAQ8BxwHzAfkB/AEAAf8BgAEHAfwDAAEPAYABAAEHAeMC8QH4AQAB/wGA
+        AQcB/AMAAQ8BgAEAAQcE8QEAAf8BgAEHAfwDAAEPAYABAAEHAfAB+AFDAeMBAAH/AYABBwH+AQABHwL/
+        AYABAAEHAfwBfAEHAccBAAH/AYABBwH+AQABHwL/AYABAAEHAf4BHgIPAQAB/gEAAQcB/wEAAT8C/wGA
+        AQABBwH/AQcB/AEfAQAB/AEAAQcB/wHAA/8BgAEAAQcB/wHAAQABPwEAAfwBAAEHBf8BgAEAAQcB/wHw
+        AQAB/wEAAfwBAAEHBf8CAAEHAf8B/gEHAf8BAAH8AQcBnwX/AgABBwT/AQAB/AEHAYMF/wIAAQcE/wEA
+        Af4BDwHwBf8CAAEPBP8BAAj/AgABHwT/AQAI/wIAAT8E/wEACP8CAAF/BP8BAAGAAgABPwb/AQAE/wEA
+        AYACAAE/Bf8B/gEAAX8D/wEAAYACAAE/BP8BgAIAAT8D/wEAAYACAAE/BP8BgAIAAT8BHwL/AQABgAIA
+        AT8E/wGAAgABPgEPAfABAQEAAYACAAE/Af8B4AL/AYACAAE+AQcBwAIAAYACAAE/Af8BAAEfAf8BwAIA
+        AT4BBwHAAgABgAIAAT8B/AEAAQcB/wHAAgABPgEPAcACAAGAAgABPwHwAX8BgQH/AeACAAE+AQcBwAIA
+        AYACAAE/AeEB4AHwAf8B+AIAAT4BBwHAAgABgAIAAT8BxwHAAXgBfwH/AgABfgEHAcACAAGAAgABPwGP
+        AYQBPgE/Af4BAQGAAf4BBwHAAgABgAIAAT8EHwH+AQAB/wHwAQABQAIAAYACAAE+AT8CHwGPAfwBAAF/
+        AeABAAEwAQMBAAGAAgABPAF/AT8BnwHPAfwBAAF/AcABAAF/Af8BAAGAAgABPgE/Ah8BjwH8AQABfwHg
+        AQABQAIAAYACAAUfAfgBAAE/AeABAAFAAgABgAIAAg8BhAE+AT8B+AEAAT8B4AEAAUACAAGAAgABAwHH
+        AcABfAF/AfgBAAE/AeABAAFAAgABgAIAAQMB4QHgAfAB/wH4AQABPwHgAQABQAIAAYACAAEDAfABfwHB
+        Af8B+AEAAT8BwAEAAUACAAGAAgABAwH8AQABAwH/AfgBAAE/AeABYAMAAYACAAEDAf8BAAEPAf8B+AEA
+        AT8B4AFgAUACAAGAAgABPwH/AeABfwH/AfgBAAF/AfABAAFwAQEBAAGAAgABPwT/Af4BAAH/AfABAAL/
+        AQABgAIAAT8F/wEAAf8B+AEBAv8BAAGAAgABPwX/AYAB/wH+AQMC/wEAAYACAAE/C/8BAAGAAgABPwv/
+        AQAB/wHBDf8BAAs=
 </value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
