--- a/SucosVendas/Sucos Vendas/Properties/Resources.resx
+++ b/SucosVendas/Sucos Vendas/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="Cadastros" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Imagens\Cadastros.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="fecharsenha" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Imagens\fecharsenha.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="icons8_credenciais_do_usuário_94" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Imagens\icons8-credenciais-do-usuário-94.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -132,5 +135,8 @@
   </data>
   <data name="user" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Imagens\user.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="versenha" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Imagens\versenha.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
